--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_slidable: ^2.0.0
   fluttertoast: ^8.2.1
+  table_calendar: ^2.1.0
 
   cupertino_icons: ^1.0.2
 
