--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   fluttertoast: ^8.2.1
   table_calendar: ^2.1.0
+  dio: ^5.1.1
 
   cupertino_icons: ^1.0.2
 
