--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: login flutter project
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -16,7 +16,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_slidable: ^2.0.0
   fluttertoast: ^8.2.1
-  table_calendar: ^2.1.0
+  table_calendar:
 
   cupertino_icons: ^1.0.2
 
